City, Country and Invoice Done

--- a/POS_Shop/POS_Shop.csproj
+++ b/POS_Shop/POS_Shop.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Bunifu.UI.WinForms.BunifuDataGridView">
       <HintPath>..\..\Bunifu_UI\BunifuCrack\Bunifu.UI.WinForms.BunifuDataGridView.dll</HintPath>
     </Reference>
+    <Reference Include="Bunifu.UI.WinForms.BunifuDropdown">
+      <HintPath>..\..\Bunifu_UI\BunifuCrack\Bunifu.UI.WinForms.BunifuDropdown.dll</HintPath>
+    </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuGradientPanel">
       <HintPath>..\..\Bunifu_UI\BunifuCrack\Bunifu.UI.WinForms.BunifuGradientPanel.dll</HintPath>
     </Reference>
@@ -95,6 +98,8 @@
     <Compile Include="DashboardForm.Designer.cs">
       <DependentUpon>DashboardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DTOs\City\CitiesListForDataGrifDto.cs" />
+    <Compile Include="DTOs\Country\CountryListForDataGirdDto.cs" />
     <Compile Include="Helpers\ISectionAware.cs" />
     <Compile Include="Helpers\SessionManager.cs" />
     <Compile Include="Interfaces\ICityRepository.cs" />
@@ -206,6 +211,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
