--- a/POS_Shop/POS_Shop.csproj
+++ b/POS_Shop/POS_Shop.csproj
@@ -102,6 +102,7 @@
     <Compile Include="DTOs\City\CitiesListForDataGrifDto.cs" />
     <Compile Include="DTOs\Country\CountryListForDataGirdDto.cs" />
     <Compile Include="Helpers\ISectionAware.cs" />
+    <Compile Include="Helpers\LoadingManager.cs" />
     <Compile Include="Helpers\SessionManager.cs" />
     <Compile Include="Interfaces\ICategoryRepository.cs" />
     <Compile Include="Interfaces\ICityRepository.cs" />
@@ -196,6 +197,12 @@
     <Compile Include="Views\DB_Screens\RestoreDbForm.Designer.cs">
       <DependentUpon>RestoreDbForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Loader\LoadingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Loader\LoadingForm.Designer.cs">
+      <DependentUpon>LoadingForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DashboardForm.resx">
       <DependentUpon>DashboardForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,6 +227,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Views\Account\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
@@ -248,6 +256,9 @@
     <EmbeddedResource Include="Views\DB_Screens\RestoreDbForm.resx">
       <DependentUpon>RestoreDbForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Loader\LoadingForm.resx">
+      <DependentUpon>LoadingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -264,6 +275,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\loading.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
