--- a/POS_Shop/App.config
+++ b/POS_Shop/App.config
@@ -9,12 +9,12 @@
   </configSections>
   <connectionStrings>
     
-    <add name="POSDbConnectionstring" connectionString="Server=TAYYAB;Database=POSDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="POSDbConnectionstring" connectionString="Server=TAYYAB;Database=POSDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     
     <!--<add name="POSDbConnectionstring" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=V:\POS\db\POSDB.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient"  />-->
 
 
-    <!--<add name="POSDbConnectionstring" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\POSDB.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient"  />-->
+    <add name="POSDbConnectionstring" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\POSDB.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient"  />
 
   </connectionStrings>
   <startup>
